Alembic camera issue #49081

Closed
opened 2016-08-12 22:48:51 +02:00 by Ejner Fergo · 5 comments

System Information
Arch Linux 64bit

Blender Version
Broken: 2.77.3 04c7d9d

Short description of error
Loading an Alembic file containing animated camera focal length in external applications, the value is shifted one frame relative to Blender.

Exact steps for others to reproduce the error
In the provided .blend the focal length starts at 25mm and ends at 35mm over 20 frames. Sensor size is APS-C to double check that this property is exported, and/or the field of view is correct. Tested external applications:
Houdini Apprentice
Gaffer (http://imageengine.github.io/gaffer)

Here's an image explaining the issue:
abc_cam.png

If only 1 frame is exported from Blender, the correct focal length and FOV is loaded in the above external applications, but obviously without animation. Exporting all frames, and the one frame shift is there.

abc_cam_tst1.blend
abc_cam_tst1.abc

**System Information** Arch Linux 64bit **Blender Version** Broken: 2.77.3 04c7d9d **Short description of error** Loading an Alembic file containing animated camera focal length in external applications, the value is shifted one frame relative to Blender. **Exact steps for others to reproduce the error** In the provided .blend the focal length starts at 25mm and ends at 35mm over 20 frames. Sensor size is APS-C to double check that this property is exported, and/or the field of view is correct. Tested external applications: Houdini Apprentice Gaffer (http://imageengine.github.io/gaffer) Here's an image explaining the issue: ![abc_cam.png](https://archive.blender.org/developer/F336321/abc_cam.png) If only 1 frame is exported from Blender, the correct focal length and FOV is loaded in the above external applications, but obviously without animation. Exporting all frames, and the one frame shift is there. [abc_cam_tst1.blend](https://archive.blender.org/developer/F336323/abc_cam_tst1.blend) [abc_cam_tst1.abc](https://archive.blender.org/developer/F336324/abc_cam_tst1.abc)
Kévin Dietrich was assigned by Ejner Fergo 2016-08-12 22:48:51 +02:00
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @EjnerFergo

Added subscriber: @EjnerFergo

This issue was referenced by 294b0756b4

This issue was referenced by 294b0756b441ac7a41d861ea6fd1088a8a6fd8ba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Should be fixed now, thanks for the report!

Should be fixed now, thanks for the report!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49081
No description provided.