Fix T49081: Alembic sampling times are not taking start frame into account.

This resulted in animations always starting at frame 0.